# python-template

./: .gitignore  Makefile  README.md  pyproject.toml
src/ticket_timeout/: __main__.py  cli.py
tests/: __init__.py
