[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-timeout"
version = "1.0.0"
description = "工单超时提醒工具"
license = { text = "MIT" }
authors = [{ name = "Ntzy123"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
build = ["pyinstaller"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ticket-timeout = "ticket_timeout:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
norecursedirs = [
    ".venv",
    "venv",
    "dist",
    "build",
]
